--- a/Static Html Lib/mango/index.css
+++ b/Static Html Lib/mango/index.css
@@ -17,6 +17,7 @@ body{
     left: 0;
     width: 100%;
     height: calc(100vh - 80px);
+    background: rgba(0, 0, 0, 0.3);
 }
 .planets-container{
     position: absolute;
