--- a/Static Html Lib/szabolcs/Stardust/stardust.css
+++ b/Static Html Lib/szabolcs/Stardust/stardust.css
@@ -11,11 +11,17 @@ body, html{
 #stardust-container{
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-image: url("./clear_gb.png");
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 span{
     width: 5px;
     height: 5px;
     background-color: #fff;
+    display: block;
+    border-radius: 50%;
 }
