--- a/Static Html Lib/szabolcs/Stardust/stardust.css
+++ b/Static Html Lib/szabolcs/Stardust/stardust.css
@@ -9,6 +9,7 @@ body, html{
 }
 
 #stardust-container{
+    position: relative;
     width: 100%;
     height: 100%;
     background-image: url("./clear_gb.png");
@@ -19,6 +20,7 @@ body, html{
 }
 
 span{
+    position: absolute;
     width: 5px;
     height: 5px;
     background-color: #fff;
