--- a/Static Html Lib/mango/index.css
+++ b/Static Html Lib/mango/index.css
@@ -35,45 +35,65 @@ body{
 .planet-1{
     position: relative;
     left: 0;
+    height: 13vw;
+    width: 13vw;
 }
 .planet-2{
     position: relative;
     left: -100%;
+    height: 2vw;
+    width: 2vw;
 }
 .planet-3{
     position: relative;
     left: -200%;
+    height: 7vw;
+    width: 7vw;
 }
 .planet-4{
     position: relative;
     left: -300%;
+    height: 4vw;
+    width: 4vw;
 }
 .planet-5{
     position: relative;
     left: -400%;
+    height: 3vw;
+    width: 3vw;
 }
 .planet-6{
     position: relative;
     left: -500%;
+    height: 8vw;
+    width: 8vw;
 }
 .planet-7{
     position: relative;
     left: -600%;
+    height: 8vw;
+    width: 8vw;
 }
 .planet-8{
     position: relative;
     left: -700%;
+    height: 4vw;
+    width: 4vw;
 }
 .planet-9{
     position: relative;
     left: -800%;
+    height: 4vw;
+    width: 4vw;
 }
 .planet-10{
     position: relative;
     left: -900%;
+    height: 2vw;
+    width: 7vw;
 }
 .planets-container img{
-    width: 100%;
+    height: 100%;
 }
 /*Planet Titles*/
 .planet-titles-bg{
