--- a/SolarSystem/Views/Home/Index.cshtml
+++ b/SolarSystem/Views/Home/Index.cshtml
@@ -1,15 +1,5 @@
-﻿@*@inherits CustomBaseViewPage<TModel>
-
-@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h2>@Localize("Hello")</h2>
-    <h2>@Localize("Welcome")</h2>
-    <h2>@Localize("Sorry")</h2>
-</div>*@
+﻿
 
 <div>
-    <h1>@ViewData["Test"]</h1>
+    <h1>@Localize("index.greeting")</h1>
 </div>
