--- a/Static Html Lib/mango/index.css
+++ b/Static Html Lib/mango/index.css
@@ -20,6 +20,10 @@ body{
     width: 100%;
     height: calc(100vh - 80px);
     overflow: hidden;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .planets-container{
     position: absolute;
@@ -27,84 +31,151 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
+    
+
+    /*position: initial;
+    border-radius: 50%;
+    border: 2px solid #ffffff6b;*/
+}
+.planets-nav{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    box-sizing: content-box;
+    border-radius: 50%;
+    /*transform: translate(-50%, -50%);*/
+    border-radius: 50%;
+    border: 2px solid #ffffff6b;
+    
     animation-name: orbitRotate;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
-.planets-nav{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    padding: 10px;
-    box-sizing: content-box;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-}
 
 /*Planat Sizeing*/
-.planet-1{
-    height: 15vw;
+.planet-1 {
     width: 15vw;
+    height: 15vw;
+    top: calc(50% - 15vh/2);
+    left: calc(50% - 15vw/2);
 }
-.planet-2{
-    height: 1.5vw;
+.planet-1 img{
+    height: 15vw;
+    transform: translate(0,0) !important;
+}
+.planet-1 img:hover{
+    transform: translate(-14px,-14px) !important;
+}
+.planet-2 {
     width: 20vw;
+    height: 20vw;
+    top: calc(50% - 20vh/2);
+    left: calc(50% - 20vw/2);
 }
-.planet-3{
-    height: 3vw;
+.planet-2 img{
+    height: 1.5vw;
+}
+.planet-3 {
     width: 28vw;
+    height: 28vw;
+    top: calc(50% - 28vh/2);
+    left: calc(50% - 28vw/2);
 }
-.planet-4{
+.planet-3 img{
     height: 3vw;
+}
+.planet-4 {
     width: 36vw;
+    height: 36vw;
+    top: calc(50% - 36vh/2);
+    left: calc(50% - 36vw/2);
 }
-.planet-5{
-    height: 2.5vw;
-    width: 43vw;
-}
-.planet-6{
-    height: 5vw;
-    width: 48vw;
-}
-.planet-7{
-    height: 4vw;
-    width: 69vw;
-}
-.planet-8{
-    height: 4vw;
-    width: 80vw;
-}
-.planet-9{
+.planet-4 img{
     height: 3vw;
-    width: 88vw;
 }
-.planet-10{
+.planet-5 {
+    width: 43vw;
+    height: 43vw;
+    top: calc(50% - 43vh/2);
+    left: calc(50% - 43vw/2);
+}
+.planet-5 img{
+    height: 2.5vw;
+}
+.planet-6 {
+    width: 48vw;
+    height: 48vw;
+    top: calc(50% - 48vh/2);
+    left: calc(50% - 48vw/2);
+}
+.planet-6 img{
+    height: 5vw;
+}
+.planet-7 {
+    width: 69vw;
+    height: 69vw;
+    top: calc(50% - 69vh/2);
+    left: calc(50% - 69vw/2);
+}
+.planet-7 img{
+    height: 4vw;
+}
+.planet-8 {
+    width: 80vw;
+    height: 80vw;
+    top: calc(50% - 80vh/2);
+    left: calc(50% - 80vw/2);
+}
+.planet-8 img{
+    height: 4vw;
+}
+.planet-9 {
+    width: 88vw;
+    height: 88vw;
+    top: calc(50% - 88vh/2);
+    left: calc(50% - 88vw/2);
+}
+.planet-9 img{
+    height: 3vw;
+}
+.planet-10 {
+    width: 95vw;
+    height: 95vw;
+    top: calc(50% - 95vh/2);
+    left: calc(50% - 95vw/2);
+}
+.planet-10 img{
     height: 2vw;
-    width: 95vw
 }
 .planets-container img{
-    height: 100%;
+    /*height: 100%;*/
+    margin: auto;
+    display: block;
+    transform: translate(0, -50%);
 }
 .planets-container img:hover{
-    height: 100%;
-    border: 2px dotted rgb(173, 48, 231);
+    border: 4px dotted rgb(227, 168, 255);
     border-radius: 50%;
     box-sizing: content-box;
     padding: 10px;
+    background: rgba(58, 6, 45, 0.6);
+    box-shadow: 5px 5px 8px #333;
 }
 
 /*Solar System Animation Timeing*/
 /*-----------------------------*/
 
-.pc-2{animation-duration: 8.8s;}
-.pc-3{animation-duration: 22.5s;}
-.pc-4{animation-duration: 36.5s;}
-.pc-5{animation-duration: 68.7s;}
-.pc-6{animation-duration: 438.3s;}
-.pc-7{animation-duration: 1059.2s;}
-.pc-8{animation-duration: 3068.1s;}
-.pc-9{animation-duration: 6026.6s;}
-.pc-10{animation-duration: 9058.2s;}
+.planet-2{animation-duration: 8.8s;}
+.planet-3{animation-duration: 22.5s;}
+.planet-4{animation-duration: 36.5s;}
+.planet-5{animation-duration: 68.7s;}
+.planet-6{animation-duration: 438.3s;}
+.planet-7{animation-duration: 1059.2s;}
+.planet-8{animation-duration: 3068.1s;}
+.planet-9{animation-duration: 6026.6s;}
+.planet-10{animation-duration: 9058.2s;}
+
+
 
 /*Planet Titles*/
 .planet-titles-bg{background-image: linear-gradient(transparent, rgb(0 0 0 / 80%) 60%);}
@@ -122,6 +193,16 @@ body{
     padding: 0 10px;
     cursor: url(cursor.png) !important;
 }
+
+
+/*.planet-3:hover .planat-title-3,
+.planet-4:hover .planat-title-4,
+.planet-5:hover .planat-title-5,
+.planet-6:hover .planat-title-6,
+.planet-7:hover .planat-title-7,
+.planet-8:hover .planat-title-8,
+.planet-9:hover .planat-title-9,
+.planet-10:hover .planat-title-10,*/
 .planet-titles:hover{
     background-image: linear-gradient(transparent, rgba(51, 51, 51, 0.6) 10%);
     height: 120px;
@@ -135,4 +216,12 @@ body{
 @keyframes orbitRotate {
     from {transform: rotate(0deg);}
     to {transform: rotate(360deg);}
+}
+
+/*Details*/
+
+#details-frame{
+    display: none;
+    height: 100px;
+    background-color: red;
 }
