--- a/Static Html Lib/details pages/det.css
+++ b/Static Html Lib/details pages/det.css
@@ -12,6 +12,7 @@
     border: solid black;
     border-radius:  5px;
     padding: 20px 20px 20px 20px;
+    margin-bottom: 20px;
 }
 .detail-facts{
     color: rgb(183, 235, 236);
@@ -33,3 +34,21 @@
 .detail-facts-subtitle{
     color: rgb(99, 247, 247);
 }
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
