--- a/SolarSystem/wwwroot/css/site.css
+++ b/SolarSystem/wwwroot/css/site.css
@@ -1,12 +1,16 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
+.navbar {
+background-color: #333;
+}
 a.navbar-brand {
     white-space: normal;
     text-align: center;
     word-break: break-all;
 }
-
+.nav-item {
+    float: right;
+}
 /* Provide sufficient contrast against white background */
 a {
     color: #0366d6;
