--- a/SolarSystem/Views/Home/Index.cshtml
+++ b/SolarSystem/Views/Home/Index.cshtml
@@ -1,89 +1,106 @@
-﻿        <!--Planets-->
-        <div class="row position-relative">
-            <div class="col-lg-12 position-absolute" style="top: 0;">
-                <div class="solar-system-container" id="solar-system-container">
-                    <div class="planets-container pc-1">
-                        <div class="planets-nav planet-10"><img src="~/Planets/pluto.png" alt=""></div>
-                        <div class="planets-nav planet-9"><img src="~/Planets/neptune.png" alt=""></div>
-                        <div class="planets-nav planet-8"><img src="~/Planets/uranus.png" alt=""></div>
-                        <div class="planets-nav planet-7"><img src="~/Planets/saturn.png" alt=""></div>
-                        <div class="planets-nav planet-6"><img src="~/Planets/jupiter.png" alt=""></div>
-                        <div class="planets-nav planet-5"><img src="~/Planets/mars.png" alt=""></div>
-                        <div class="planets-nav planet-4"><img src="~/Planets/earth.png" alt=""></div>
-                        <div class="planets-nav planet-3"><img src="~/Planets/venus.png" alt=""></div>
-                        <div class="planets-nav planet-2"><img src="~/Planets/mercury.png" alt=""></div>
-                        <div class="planets-nav planet-1"><img src="~/Planets/sun.png" alt=""></div>
+﻿@model PlanetListViewModel
+
+<!--Planets-->
+<div class="row position-relative">
+    <div class="col-lg-12 position-absolute" style="top: 0;">
+        <div class="solar-system-container" id="solar-system-container">
+            <div class="planets-container pc-1">
+                <div class="planets-nav planet-10"><img src="~/Planets/pluto.png" alt=""></div>
+                <div class="planets-nav planet-9"><img src="~/Planets/neptune.png" alt=""></div>
+                <div class="planets-nav planet-8"><img src="~/Planets/uranus.png" alt=""></div>
+                <div class="planets-nav planet-7"><img src="~/Planets/saturn.png" alt=""></div>
+                <div class="planets-nav planet-6"><img src="~/Planets/jupiter.png" alt=""></div>
+                <div class="planets-nav planet-5"><img src="~/Planets/mars.png" alt=""></div>
+                <div class="planets-nav planet-4"><img src="~/Planets/earth.png" alt=""></div>
+                <div class="planets-nav planet-3"><img src="~/Planets/venus.png" alt=""></div>
+                <div class="planets-nav planet-2"><img src="~/Planets/mercury.png" alt=""></div>
+                <div class="planets-nav planet-1"><img src="~/Planets/sun.png" alt=""></div>
+            </div>
+        </div>
+        <div class="details-frame" id="details-frame">
+            <div class="container planetinfo">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <!--main planet png-->
+                        <img src="bright-sun.png" class="detail-planet" alt="" title="">
                     </div>
-                </div>
-                <div class="details-frame" id="details-frame">
-                    <div class="container planetinfo">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <!--main planet png-->
-                                <img src="bright-sun.png" class="detail-planet" alt="" title="">
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="detail-text-subtitle">
-                                    <h3>The Sun</h3>
-                                </div>
-                                <div class="detail-text"><p> Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system. 
-                                    The Sun is about 150 million kilometers from Earth, and without its energy, life as we know it could not exist here on our home planet.</p>
-                                    <p>
-                                    The Sun is the largest object in our solar system. The Sun’s volume would need 1.3 million Earths to fill it. 
-                                    Its gravity holds the solar system together, keeping everything from the biggest planets to the smallest bits of debris in orbit around it. 
-                                    The hottest part of the Sun is its core, where temperatures top 15 million degrees Celsius. 
-                                    The Sun’s activity, from its powerful eruptions to the steady stream of charged particles it sends out, 
-                                    influences the nature of space throughout the solar system.</p>
-                                
-                                    <p> NASA and other international space agencies monitor the Sun 24/7 with a fleet of spacecraft, 
-                                    studying everything from its atmosphere to its surface, and even peering inside the Sun using special instruments. 
-                                    Sun-exploring spacecraft include Parker Solar Probe, Solar Orbiter, SOHO, ACE, IRIS, WIND, Hinode, Solar Dynamics Observatory, 
-                                    and STEREO.</p>
-                                    </div>
-                            </div>
-                            
-            
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <!--planet structure png-->
-                            <img src="sun-structure.png" class="detail-structure" alt="">
+                    <div class="col-sm-6">
+                        <div class="detail-text-subtitle">
+                            <h3>The Sun</h3>
                         </div>
-                        <div class="col-sm-6">
-                            <div class="detail-facts-subtitle">
-                                <h4>Facts</h4>
-                            </div>
-                            <div class="detail-facts">
-                                <ul>
-                                    <li>Sun accounts for 99.86% of the mass in the solar system.</li>
-                                    <li>Over one million Earth's could fit inside the Sun.</li>
-                                    <li>One day the Sun will consume the Earth.</li>
-                                    <li>The energy created by the Sun's core is nuclear fusion.</li>
-                                    <li>The Sun is almost a perfect sphere.</li>
-                                    <li>The Sun is travelling at 220 km per second.</li>
-                                </ul>
-                                </div>
+                        <div class="detail-text">
+                            <p>
+                                Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system.
+                                The Sun is about 150 million kilometers from Earth, and without its energy, life as we know it could not exist here on our home planet.
+                            </p>
+                            <p>
+                                The Sun is the largest object in our solar system. The Sun’s volume would need 1.3 million Earths to fill it.
+                                Its gravity holds the solar system together, keeping everything from the biggest planets to the smallest bits of debris in orbit around it.
+                                The hottest part of the Sun is its core, where temperatures top 15 million degrees Celsius.
+                                The Sun’s activity, from its powerful eruptions to the steady stream of charged particles it sends out,
+                                influences the nature of space throughout the solar system.
+                            </p>
+
+                            <p>
+                                NASA and other international space agencies monitor the Sun 24/7 with a fleet of spacecraft,
+                                studying everything from its atmosphere to its surface, and even peering inside the Sun using special instruments.
+                                Sun-exploring spacecraft include Parker Solar Probe, Solar Orbiter, SOHO, ACE, IRIS, WIND, Hinode, Solar Dynamics Observatory,
+                                and STEREO.
+                            </p>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <!--planet structure png-->
+                        <img src="sun-structure.png" class="detail-structure" alt="">
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="detail-facts-subtitle">
+                            <h4>Facts</h4>
+                        </div>
+                        <div class="detail-facts">
+                            <ul>
+                                <li>Sun accounts for 99.86% of the mass in the solar system.</li>
+                                <li>Over one million Earth's could fit inside the Sun.</li>
+                                <li>One day the Sun will consume the Earth.</li>
+                                <li>The energy created by the Sun's core is nuclear fusion.</li>
+                                <li>The Sun is almost a perfect sphere.</li>
+                                <li>The Sun is travelling at 220 km per second.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                </div>
             </div>
         </div>
-        
-        <div class="row position-fixed" style="bottom: 0;">
-            <div class="col-lg-12 planet-titles-bg">
-                <div class="col-lg-8 mx-auto planet-titles-container">
-                    <div class="planet-titles planet-title-1" onclick="details('')">@GetString("index.sun")</div>
-                    <div class="planet-titles planet-title-2" onclick="details('')">@GetString("index.mercury")</div>
-                    <div class="planet-titles planet-title-3" onclick="details('')">@GetString("index.venus")</div>
-                    <div class="planet-titles planet-title-4" onclick="details('')">@GetString("index.earth")</div>
-                    <div class="planet-titles planet-title-0" onclick="details('')">@GetString("index.moon")</div>
-                    <div class="planet-titles planet-title-5" onclick="details('')">@GetString("index.mars")</div>
-                    <div class="planet-titles planet-title-6" onclick="details('')">@GetString("index.jupiter")</div>
-                    <div class="planet-titles planet-title-7" onclick="details('')">@GetString("index.saturn")</div>
-                    <div class="planet-titles planet-title-8" onclick="details('')">@GetString("index.uranus")</div>
-                    <div class="planet-titles planet-title-9" onclick="details('')">@GetString("index.neptune")</div>
-                    <div class="planet-titles planet-title-10" onclick="details('')">@GetString("index.pluto")</div>
+    </div>
+
+    <div class="row position-fixed" style="bottom: 0;">
+        <div class="col-lg-12 planet-titles-bg">
+            <div class="col-lg-8 mx-auto planet-titles-container">
+                <div class="planet-titles planet-title-1">
+                    @GetString("index.sun")
+                    <a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[0].Id"></a>
                 </div>
+                <div class="planet-titles planet-title-2" onclick="details('')">@GetString("index.mercury")</div>
+                <div class="planet-titles planet-title-3" onclick="details('')">@GetString("index.venus")</div>
+                <div class="planet-titles planet-title-4" onclick="details('')">@GetString("index.earth")</div>
+                <div class="planet-titles planet-title-0" onclick="details('')">@GetString("index.moon")</div>
+                <div class="planet-titles planet-title-5" onclick="details('')">@GetString("index.mars")</div>
+
+                <div>
+                    <a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[0].Id">@GetString("index.sun")</a>
+
+                </div>
+
+                <div class="planet-titles planet-title-6" onclick="details('')">@GetString("index.jupiter")</div>
+                <div class="planet-titles planet-title-7" onclick="details('')">@GetString("index.saturn")</div>
+                <div class="planet-titles planet-title-8" onclick="details('')">@GetString("index.uranus")</div>
+                <div class="planet-titles planet-title-9" onclick="details('')">@GetString("index.neptune")</div>
+                <div class="planet-titles planet-title-10" onclick="details('')">@GetString("index.pluto")</div>
             </div>
         </div>
+    </div>
     <script src="./index.js"></script>
