--- a/SolarSystem/Views/_ViewImports.cshtml
+++ b/SolarSystem/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 
 @using SolarSystem
 @using SolarSystem.Models
+@using SolarSystem.ViewModels
 @using Microsoft.AspNetCore.Builder
 @using Microsoft.Extensions.Options
 
