--- a/Static Html Lib/szabolcs/Stardust/stardust.css
+++ b/Static Html Lib/szabolcs/Stardust/stardust.css
@@ -9,7 +9,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background-image: url("./clear_gb.png");
+    background-image: url("./space_background.jpg");
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
