--- a/SolarSystem/Views/Home/Index.cshtml
+++ b/SolarSystem/Views/Home/Index.cshtml
@@ -76,29 +76,21 @@
             </div>
         </div>
     </div>
-
     <div class="row position-fixed" style="bottom: 0;">
-        <div class="col-lg-12 planet-titles-bg">
-            <div class="col-lg-8 mx-auto planet-titles-container">
-                <div class="planet-titles planet-title-1">
-                    @GetString("index.sun")
-                    <a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[0].Id"></a>
-                </div>
-                <div class="planet-titles planet-title-2" onclick="details('')">@GetString("index.mercury")</div>
-                <div class="planet-titles planet-title-3" onclick="details('')">@GetString("index.venus")</div>
-                <div class="planet-titles planet-title-4" onclick="details('')">@GetString("index.earth")</div>
-                <div class="planet-titles planet-title-0" onclick="details('')">@GetString("index.moon")</div>
-                <div class="planet-titles planet-title-5" onclick="details('')">@GetString("index.mars")</div>
+            <div class="col-lg-12 planet-titles-bg">
+                <div class="col-lg-8 mx-auto planet-titles-container">
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[0].Id">@GetString("index.sun")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[1].Id">@GetString("index.mercury")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[2].Id">@GetString("index.venus")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[3].Id">@GetString("index.earth")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[4].Id">@GetString("index.moon")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[5].Id">@GetString("index.mars")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[6].Id">@GetString("index.jupiter")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[7].Id">@GetString("index.saturn")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[8].Id">@GetString("index.uranus")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[9].Id">@GetString("index.neptune")</a></div>
+                    <div class="planet-titles planet-title-5"><a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[10].Id">@GetString("index.pluto")</a></div>
 
-                <div>
-                    <a asp-controller="Home" asp-action="Detail" asp-route-id="@Model.PlanetList[0].Id">@GetString("index.sun")</a>
-                </div>
-
-                <div class="planet-titles planet-title-6" onclick="details('')">@GetString("index.jupiter")</div>
-                <div class="planet-titles planet-title-7" onclick="details('')">@GetString("index.saturn")</div>
-                <div class="planet-titles planet-title-8" onclick="details('')">@GetString("index.uranus")</div>
-                <div class="planet-titles planet-title-9" onclick="details('')">@GetString("index.neptune")</div>
-                <div class="planet-titles planet-title-10" onclick="details('')">@GetString("index.pluto")</div>
             </div>
         </div>
     </div>
