--- a/SolarSystem/Views/Shared/_Layout.cshtml
+++ b/SolarSystem/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="@GetString("page.lang")">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -52,11 +52,12 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted d-none" >
+    <footer class="footer" >
         <div class="container">
             &copy; 2022 - ZBC Ringsted - Development - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
