--- a/SolarSystem/wwwroot/css/index.css
+++ b/SolarSystem/wwwroot/css/index.css
@@ -31,11 +31,6 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    
-
-    /*position: initial;
-    border-radius: 50%;
-    border: 2px solid #ffffff6b;*/
 }
 .planets-nav{
     position: absolute;
@@ -43,7 +38,6 @@ body{
     left: 50%;
     box-sizing: content-box;
     border-radius: 50%;
-    /*transform: translate(-50%, -50%);*/
     border-radius: 50%;
     border: 2px solid #ffffff6b;
     
@@ -148,7 +142,6 @@ body{
     height: 2vw;
 }
 .planets-container img{
-    /*height: 100%;*/
     margin: auto;
     display: block;
     transform: translate(0, -50%);
@@ -178,32 +171,28 @@ body{
 
 
 /*Planet Titles*/
-.planet-titles-bg{background-image: linear-gradient(transparent, rgb(0 0 0 / 80%) 60%);}
+.planet-titles-bg{
+    background-image: linear-gradient(transparent, rgb(0 0 0 / 80%) 60%);
+    margin-bottom: 50px;
+}
 .planet-titles-container{
     width: 100vw;
     height: 100px;
-    line-height: 100px;
     font-size: 22px;
     display: flex;
     justify-content: space-around;
-    color: #fff;
 }
 .planet-titles{
     display: block;
-    padding: 0 10px;
     cursor: url(cursor.png) !important;
 }
-
-
-/*.planet-3:hover .planat-title-3,
-.planet-4:hover .planat-title-4,
-.planet-5:hover .planat-title-5,
-.planet-6:hover .planat-title-6,
-.planet-7:hover .planat-title-7,
-.planet-8:hover .planat-title-8,
-.planet-9:hover .planat-title-9,
-.planet-10:hover .planat-title-10,*/
-.planet-titles:hover{
+.planet-titles a {
+    padding: 0 10px;
+    color: white;
+    line-height: 100px;
+    display: block;
+} 
+.planet-titles a:hover{
     background-image: linear-gradient(transparent, rgba(51, 51, 51, 0.6) 10%);
     height: 120px;
     line-height: 120px;
@@ -211,6 +200,7 @@ body{
     border-bottom: 5px solid rgb(173, 48, 231);
     padding: 0 20px;
     font-size: 24px;
+    text-decoration: none;
 }
 
 @keyframes orbitRotate {
