--- a/SolarSystem/wwwroot/css/site.css
+++ b/SolarSystem/wwwroot/css/site.css
@@ -3,6 +3,11 @@ for details on configuring this project to bundle and minify static web assets. 
 .navbar {
 background-color: #333;
 }
+#culture {
+    background-color: #555;
+    border: 1px solid #777;
+    color: #eee;
+}
 a.navbar-brand {
     white-space: normal;
     text-align: center;
@@ -12,8 +17,8 @@ a.navbar-brand {
     float: right;
 }
 /* Provide sufficient contrast against white background */
-a {
-    color: #0366d6;
+a, a:hover {
+    color: #ff94f9;
 }
 
 .btn-primary {
@@ -40,14 +45,6 @@ html {
     }
 }
 
-.border-top {
-    border-top: 1px solid #e5e5e5;
-}
-
-.border-bottom {
-    border-bottom: 1px solid #e5e5e5;
-}
-
 .box-shadow {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
@@ -66,7 +63,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 60px;
+    margin-bottom: 150px;
 }
 
 .footer {
@@ -74,5 +71,8 @@ body {
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 50px; /* Vertically center the text there */
+    background-color: #333;
+    text-align: center;
+    color: #eee;
 }
