--- a/SolarSystem/wwwroot/css/index.css
+++ b/SolarSystem/wwwroot/css/index.css
@@ -50,8 +50,9 @@ body{
 .planet-1 {
     width: 15vw;
     height: 15vw;
-    top: calc(50% - 15vh/2);
+    top: calc(50% - 15vh);
     left: calc(50% - 15vw/2);
+    border: none;
 }
 .planet-1 img{
     height: 15vw;
@@ -63,7 +64,7 @@ body{
 .planet-2 {
     width: 20vw;
     height: 20vw;
-    top: calc(50% - 20vh/2);
+    top: calc(50% - 20vh);
     left: calc(50% - 20vw/2);
 }
 .planet-2 img{
@@ -72,7 +73,7 @@ body{
 .planet-3 {
     width: 28vw;
     height: 28vw;
-    top: calc(50% - 28vh/2);
+    top: calc(50% - 28vh);
     left: calc(50% - 28vw/2);
 }
 .planet-3 img{
@@ -81,7 +82,7 @@ body{
 .planet-4 {
     width: 36vw;
     height: 36vw;
-    top: calc(50% - 36vh/2);
+    top: calc(50% - 36vh);
     left: calc(50% - 36vw/2);
 }
 .planet-4 img{
@@ -90,7 +91,7 @@ body{
 .planet-5 {
     width: 43vw;
     height: 43vw;
-    top: calc(50% - 43vh/2);
+    top: calc(50% - 43vh);
     left: calc(50% - 43vw/2);
 }
 .planet-5 img{
@@ -99,7 +100,7 @@ body{
 .planet-6 {
     width: 48vw;
     height: 48vw;
-    top: calc(50% - 48vh/2);
+    top: calc(50% - 48vh);
     left: calc(50% - 48vw/2);
 }
 .planet-6 img{
@@ -108,7 +109,7 @@ body{
 .planet-7 {
     width: 69vw;
     height: 69vw;
-    top: calc(50% - 69vh/2);
+    top: calc(50% - 69vh);
     left: calc(50% - 69vw/2);
 }
 .planet-7 img{
@@ -117,7 +118,7 @@ body{
 .planet-8 {
     width: 80vw;
     height: 80vw;
-    top: calc(50% - 80vh/2);
+    top: calc(50% - 80vh);
     left: calc(50% - 80vw/2);
 }
 .planet-8 img{
@@ -126,7 +127,7 @@ body{
 .planet-9 {
     width: 88vw;
     height: 88vw;
-    top: calc(50% - 88vh/2);
+    top: calc(50% - 88vh);
     left: calc(50% - 88vw/2);
 }
 .planet-9 img{
@@ -135,7 +136,7 @@ body{
 .planet-10 {
     width: 95vw;
     height: 95vw;
-    top: calc(50% - 95vh/2);
+    top: calc(50% - 95vh);
     left: calc(50% - 95vw/2);
 }
 .planet-10 img{
