--- a/SolarSystem/wwwroot/css/site.css
+++ b/SolarSystem/wwwroot/css/site.css
@@ -76,3 +76,89 @@ body {
     text-align: center;
     color: #eee;
 }
+
+/*Select*/
+.vodiapicker {
+    display: none;
+}
+
+#a {
+    padding-right: 10px;
+    padding-left: 0;
+    background: #ddd;
+    position: absolute;
+    z-index: 1;
+}
+
+    #a img, .btn-select img {
+        width: 15px;
+        border-radius: 50%;
+    }
+
+    #a li {
+        list-style: none;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+        #a li:hover {
+            background-color: #fff;
+        }
+
+        #a li img {
+            margin: 5px;
+            margin-left: 10px;
+        }
+
+        #a li span, .btn-select li span {
+            margin-left: 10px;
+        }
+
+/* item list */
+
+.b {
+    display: none;
+    width: 100%;
+    max-width: 350px;
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 5px;
+}
+
+.open {
+    display: show !important;
+}
+
+.btn-select {
+    margin-top: 10px;
+    width: 100%;
+    max-width: 350px;
+    height: 34px;
+    border-radius: 5px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+
+    .btn-select li {
+        list-style: none;
+        float: left;
+        padding-bottom: 0px;
+    }
+
+    .btn-select:hover li {
+        margin-left: 0px;
+    }
+
+    .btn-select:hover {
+        background-color: #F4F3F3;
+        border: 1px solid transparent;
+        box-shadow: inset 0 0px 0px 1px #ccc;
+    }
+
+    .btn-select:focus {
+        outline: none;
+    }
+
+.lang-select {
+    margin-left: 50px;
+}
