--- a/SolarSystem/Views/Home/Detail.cshtml
+++ b/SolarSystem/Views/Home/Detail.cshtml
@@ -1,10 +1,23 @@
 ﻿@model Planet
 <link rel="stylesheet" href="~/css/det.css"/>
-<h1>@Model.Id</h1>
+<!--h1>@Model.Id<h1>
 <h2>@Model.Name</h2>
-<p>@GetString("details."+@Model.Name)<p>
+<p>@GetString("details."+@Model.Name)<p-->
 
  <div class="container planetinfo">
+            <div class="row">
+                <button onclick="playAudio()">Audio</button>
+                <audio id="audioFile" src="@GetString("details."+@Model.Name+".audio")"></audio>
+                <script>
+                    function playAudio(){
+                        var file = document.getElementById("audioFile");
+                        if(file.psused)
+                            file.play();
+                        else
+                            file.pause();
+                    }
+                </script>
+            </div>
             <div class="row">
                 <div class="col-sm-6">
                     <!--main planet png-->
