--- a/SolarSystem/Views/Home/Detail.cshtml
+++ b/SolarSystem/Views/Home/Detail.cshtml
@@ -69,3 +69,5 @@
                     </div>
         </div>
     </div>
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+        <script src="~/js/signal.js"></script>
