--- a/SolarSystem/Views/Home/Stardust.cshtml
+++ b/SolarSystem/Views/Home/Stardust.cshtml
@@ -1,1 +1,6 @@
-﻿<h1>Star Dust</h1>
+﻿<!--Container for the stars-->
+    <link rel="stylesheet" href="~/css/stardust.css">
+    <div id="stardust-container" onload="onMouseUpdate()">
+
+    </div>
+    <script src="~/js/stardust.js"></script>
