--- a/SolarSystem/Views/Home/Detail.cshtml
+++ b/SolarSystem/Views/Home/Detail.cshtml
@@ -111,15 +111,10 @@
              <div class="col-sm-6 d-flex align-items-center">
                 <div class="detail-facts">
                     <div class="detail-facts-subtitle">
-                        <h4>Facts</h4>
+                        <h4>@GetString("details.facts.trl")</h4>
                     </div>
                     <ul>
-                        <li>Sun accounts for 99.86% of the mass in the solar system.</li>
-                        <li>Over one million Earth's could fit inside the Sun.</li>
-                        <li>One day the Sun will consume the Earth.</li>
-                        <li>The energy created by the Sun's core is nuclear fusion.</li>
-                        <li>The Sun is almost a perfect sphere.</li>
-                        <li>The Sun is travelling at 220 km per second.</li>
+                        @GetString("details.facts."+@Model.Name)
                     </ul>
                 </div>
             </div>
